fix(stark-ui): app-sidebar - header is now visible on iOS devices (iTouch, iPhone, iPad)
ISSUES CLOSED: #1338

--- a/packages/stark-ui/src/modules/app-sidebar/components/_app-sidebar.component.scss
+++ b/packages/stark-ui/src/modules/app-sidebar/components/_app-sidebar.component.scss
@@ -50,12 +50,24 @@
 }
 
 .stark-app-sidebar .mat-sidenav-content {
-  margin-top: $stark-header-size;
+  &:not(.stark-ios-device) {
+    margin-top: $stark-header-size;
+  }
+
+  &.stark-ios-device .stark-main-container {
+    margin-top: $stark-header-size;
+  }
 }
 
 @media #{$tablet-screen-query} {
   .stark-app-sidebar .mat-sidenav-content {
-    margin-top: $stark-header-size-desktop;
+    &:not(.stark-ios-device) {
+      margin-top: $stark-header-size-desktop;
+    }
+
+    &.stark-ios-device .stark-main-container {
+      margin-top: $stark-header-size-desktop;
+    }
   }
 }
 
